--- a/lesson-five/index.html
+++ b/lesson-five/index.html
@@ -266,7 +266,7 @@
                 <label for="card_img_file" class="file_button">
                     <span class="button_span">Browse photo</span>
                     <span id="file_name_span">Выберите файл</span>
-                    <input type="file" name="card_img" id="card_img_file" onchange="displayFileName()" required></label>
+                    <input type="file" accept="image/*" name="card_img" id="card_img_file" onchange="displayFileName()" required></label>
                 <br>
                 <input type="button" value="SAVE" id="add_card_button" onclick="addCard()">
             </form>
